add avltree node delete function and extra code comments

--- a/data_structure/Sorting/Sorting.cbp
+++ b/data_structure/Sorting/Sorting.cbp
@@ -34,6 +34,14 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="merge_sort.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="merge_sort.h" />
+		<Unit filename="quick_sort.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="quick_sort.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
