--- a/data_structure/Table_Stack_Queue/Table_Stack_Queue.cbp
+++ b/data_structure/Table_Stack_Queue/Table_Stack_Queue.cbp
@@ -31,6 +31,14 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="doubly_list.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="doubly_list.h" />
+		<Unit filename="list.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="list.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
