Traversal AVL tree non-recursively for printinng

--- a/data_structure/Table_Stack_Queue/Table_Stack_Queue.cbp
+++ b/data_structure/Table_Stack_Queue/Table_Stack_Queue.cbp
@@ -35,6 +35,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="doubly_list.h" />
+		<Unit filename="kernel_list.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="kernel_list.h" />
 		<Unit filename="list.c">
 			<Option compilerVar="CC" />
 		</Unit>
