--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ golang/process/process
 golang/net/rpc/rpc
 golang/file/file
 java/*.class
+golang/file/json/json
+golang/file/json/person_info.json
