golang: file: add xml file write and read test codes

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ golang/file/file
 java/*.class
 golang/file/json/json
 golang/file/json/person_info.json
+golang/file/xml/B.xml
+golang/file/xml/xml
