java: redis: add redis cluster java api test codes

--- a/java/redis/Makefile
+++ b/java/redis/Makefile
@@ -1,7 +1,7 @@
 
 all:
-	javac -cp .:jedis-2.9.0.jar RedisTest.java
-	java -cp .:jedis-2.9.0.jar RedisTest
+	javac -cp .:jedis-2.9.0.jar:commons-pool2-2.8.0.jar -d . *.java
+	java -cp .:jedis-2.9.0.jar:commons-pool2-2.8.0.jar redistest.RedisTest
 
 clean:
-	rm *.class
+	rm -rf redistest
