golang: etcd: link etcd and etcdctl im docker image

--- a/golang/etcd/Dockerfile
+++ b/golang/etcd/Dockerfile
@@ -6,4 +6,6 @@ COPY etcd-v3.4.2-linux-amd64.tar.gz etcd-v3.4.2-linux-amd64.tar.gz
 RUN tar -xzvf etcd-v3.4.2-linux-amd64.tar.gz -C /usr/local/etcd
 RUN rm -f etcd-v3.4.2-linux-amd64.tar.gz
 COPY etcd.sh /usr/local/bin/etcd.sh
+RUN ln -sf /usr/local/etcd/etcd-v3.4.2-linux-amd64/etcd /usr/local/bin/etcd
+RUN ln -sf /usr/local/etcd/etcd-v3.4.2-linux-amd64/etcdctl /usr/local/bin/etcdctl
 CMD /bin/bash /usr/local/bin/etcd.sh
