golang: etcd: set local dns server for etcd node

--- a/golang/etcd/Dockerfile
+++ b/golang/etcd/Dockerfile
@@ -1,6 +1,6 @@
 FROM centos:7
 
-RUN yum install -y vim net-tools
+RUN yum install -y vim net-tools bind-utils
 RUN mkdir -p mkdir -p /usr/local/etcd
 COPY etcd-v3.4.2-linux-amd64.tar.gz etcd-v3.4.2-linux-amd64.tar.gz
 RUN tar -xzvf etcd-v3.4.2-linux-amd64.tar.gz -C /usr/local/etcd
