--- a/web/Makefile
+++ b/web/Makefile
@@ -3,4 +3,7 @@ tomcat_image:
 	docker build -t tomcat -f Dockerfile.tomcat .
 
 dnsmasq_image:
-	docker build -t dnsmasq -f Dockerfile.dnsmasq .
+	docker build -t dnsmasq -f Dockerfile.dnsmasq
+
+consul_image:
+	docker build -t consul -f Dockerfile.consul .
