--- a/web/Makefile
+++ b/web/Makefile
@@ -7,3 +7,9 @@ dnsmasq_image:
 
 consul_image:
 	docker build -t consul -f Dockerfile.consul .
+
+consul_cluster:
+	docker run -itd --name c1 --env CONSUL_RUN_MODE=server consul
+	docker run -itd --name c2 --env CONSUL_RUN_MODE=server consul
+	docker run -itd --name c3 --env CONSUL_RUN_MODE=server consul
+	docker run -itd --name c4 --env CONSUL_RUN_MODE=client consul
