java: thrift: use module for server and client codes

--- a/java/rpc/thrift/Makefile
+++ b/java/rpc/thrift/Makefile
@@ -1,12 +1,13 @@
 
 build: clean
 	mvn package
+	mvn install
 
 server_exec:
-	mvn exec:java -Dexec.mainClass="server.HelloServerDemo"
+	mvn exec:java -pl server -Dexec.mainClass="server.HelloServerDemo"
 
 client_exec:
-	mvn exec:java -Dexec.mainClass="server.HelloClientDemo"
+	mvn exec:java -pl client -Dexec.mainClass="client.HelloClientDemo"
 
 clean:
 	mvn clean
