--- a/java/spi-demo/spi-service/pom.xml
+++ b/java/spi-demo/spi-service/pom.xml
@@ -36,5 +36,13 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-common</artifactId>
+            <version>2.7.8</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 </project>
