--- a/java/spi-demo/spi-test/pom.xml
+++ b/java/spi-demo/spi-test/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>spi-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-common</artifactId>
+            <version>2.7.8</version>
+        </dependency>
     </dependencies>
 
     <build>
