--- a/java/spring/pom.xml
+++ b/java/spring/pom.xml
@@ -13,6 +13,11 @@
             <artifactId>spring-core</artifactId>
             <version>4.3.10.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.2.3.RELEASE</version>
+        </dependency>
     </dependencies>
     <packaging>jar</packaging>
     
