java: thrift: use spring-boot-maven-plugin to build jar

--- a/java/rpc/thrift/server/pom.xml
+++ b/java/rpc/thrift/server/pom.xml
@@ -32,19 +32,16 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.1.4.RELEASE</version>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>java</goal>
+                            <goal>repackage</goal>
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <mainClass>server.HelloServerDemo</mainClass>
-                </configuration>
             </plugin>
         </plugins>
     </build>
